--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" async></script>
     <title>Odin Calculator</title>
 </head>
 <body>
-    
+    <h1>Odin Calculator</h1>
+    <div id="main-container">
+        <div class="text-cont">
+            <p></p>
+        </div>
+        <div class="calc-btn">
+            <button>%</button>
+            <button>CE</button>
+            <button data-btn='clear' class="btn">C</button>
+            <button data-btn='del' class="btn">DEL</button>
+            <button data-btn='7' class="btn">7</button>
+            <button data-btn='8' class="btn">8</button>
+            <button data-btn='9' class="btn">9</button>
+            <button data-btn='mul' class="btn">X</button>
+            <button data-btn='4' class="btn">4</button>
+            <button data-btn='5' class="btn">5</button>
+            <button data-btn='6' class="btn">6</button>
+            <button data-btn='sub' class="btn">-</button>
+            <button data-btn='1' class="btn">1</button>
+            <button data-btn='2' class="btn">2</button>
+            <button data-btn='3' class="btn">3</button>
+            <button data-btn='add' class="btn">+</button>
+            <button data-btn='.' class="btn">.</button>
+            <button data-btn='0' class="btn">0</button>
+            <button data-btn='div' class="btn">/</button>
+            <button data-btn='equal' class="btn">=</button>
+        </div>
+    </div>
 </body>
 </html>
